added some json api functionality

--- a/views/thermostat.erb
+++ b/views/thermostat.erb
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
-  <link rel="stylesheet" href="css/toggles.css">
-  <link rel="stylesheet" href="css/toggles-light.css">
-  <link rel="stylesheet" href="css/sliders.css">
-  <link rel="stylesheet" href="css/sliders-light.css">
-  <script src="src/Thermostat.js"></script>
+  <link rel="stylesheet" href="../css/toggles.css">
+  <link rel="stylesheet" href="../css/toggles-light.css">
+  <link rel="stylesheet" href="../css/sliders.css">
+  <link rel="stylesheet" href="../css/sliders-light.css">
+  <script src="../public/js/Thermostat.js"></script>
 </head>
 
 <body id="main-body">
-  <script src="jquery.js"></script>
+  <script src="lib/jquery.js"></script>
 
   <h2 id="temperature"></h2>
   <h4>
@@ -31,10 +31,10 @@
   <button type="button" id="down">Down</button>
   <button type="button" id="reset">Reset</button>
 
-  <script src="src/Interface.js"></script>
-  <script src="src/toggles.js" type="text/javascript"></script>
-  <script src="src/toggles.min.js" type="text/javascript"></script>
-  <script src="src/sliders.js" type="text/javascript"></script>
-  <script src="src/sliders.min.js" type="text/javascript"></script>
+  <script src="../public/js/Interface.js"></script>
+  <script src="../public/js/toggles.js" type="text/javascript"></script>
+  <script src="../public/js/toggles.min.js" type="text/javascript"></script>
+  <script src="../public/js/sliders.js" type="text/javascript"></script>
+  <script src="../public/js/sliders.min.js" type="text/javascript"></script>
 </body>
 </html>
